# godot-rich-text

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
godot/: editor_demo.gd  editor_demo.gd.uid  node_2d.tscn  project.godot
godot/addons/godot_rich_text/: godot_rich_text.gdextension  godot_rich_text.gdextension.uid
godot/addons/godot_rich_text/icons/: RichTextEdit.svg.import  RichTextView.svg.import
src/: bridge.rs  fonts.rs  input.rs  lib.rs  rich_text_edit.rs  rich_text_view.rs
