[package]
name = "godot-rich-text"
version = "0.1.1"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
text-document = { path = "../text-document/crates/public_api", version = "1.2.0" }
text-typeset = { path = "../text-typeset", features = ["text-document"], version = "1.0.0" }

